# agentsql

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/: basic.rs
migrations/: mysql.sql  postgres.sql  sqlite.sql
src/: backend.rs  error.rs  lib.rs  schema.rs  sqlite.rs
tests/: test.rs
