[package]
name = "agentsql"
version = "0.1.2"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "Interface for agent sql persistence"
documentation = "https://docs.rs/agentsql"
homepage = "https://github.com/cryptopatrick/agentsql"
repository = "https://github.com/cryptopatrick/agentsql"
readme = "README.md"
keywords = ["AI", "Agent", "Persistence"]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "agentsql"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]

###############################################################################
[features]
default = ["sqlite"]
sqlite = []
postgres = []
mysql = []
