[package]
name = "agentsql"
version = "0.2.0"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "Interface for agent sql persistence"
documentation = "https://docs.rs/agentsql"
homepage = "https://github.com/cryptopatrick/agentsql"
repository = "https://github.com/cryptopatrick/agentsql"
readme = "README.md"
keywords = ["AI", "Agent", "Persistence"]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "agentsql"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
agentdb = { path = "../agentdb" }
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# SQLx for all database backends (async)
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "any"], optional = true }

# Common dependencies
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

###############################################################################
[features]
default = ["sqlite"]
sqlite = ["sqlx", "sqlx/sqlite"]
postgres = ["sqlx", "sqlx/postgres", "sqlx/json", "sqlx/uuid", "sqlx/chrono"]
mysql = ["sqlx", "sqlx/mysql", "sqlx/json", "sqlx/uuid", "sqlx/chrono"]
